@@ -3,13 +3,12 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 
 package com.powsybl.cgmes.model;
 
 import java.util.Map;
-
-import com.google.common.collect.ImmutableMap;
 
 /**
  * @author Luma Zamarreño {@literal <zamarrenolm at aia.es>}
@@ -58,6 +57,11 @@ public enum CgmesSubset {
             return super.isValidName(contextName)
                     || TOPOLOGY.isValidName(contextName) && isBoundary(contextName);
         }
+    }, UNKNOWN("unknown") {
+        @Override
+        public boolean isValidName(String contextName) {
+            return false;
+        }
     };
 
     CgmesSubset(String identifier) {
@@ -88,7 +92,7 @@ public enum CgmesSubset {
     private final String identifier;
     private final String validName0;
     private final String validName1;
-    private static final Map<String, String> PROFILE = ImmutableMap.of(
+    private static final Map<String, String> PROFILE = Map.of(
         "SV", "StateVariables",
         "EQ", "EquipmentCore",
         "SSH", "SteadyStateHypothesis",
